fix adaptive on tablet

--- a/less/media-quaries.less
+++ b/less/media-quaries.less
@@ -79,8 +79,39 @@
 	.inverse_friends{ display: none; }
 	.contact-form-tablet{ display: inherit; }
 	.about-us-tablet{ display: none; }
-	.map-tablet, .vacancy{ display: inherit; }
+	.map-tablet, .vacancy, .project-team_tablet{ display: inherit; }
 	.no-tablet{ display: none; }
+	.project-team_head{
+		h2, .desc{
+			text-align: center;
+			font-weight: normal;
+		}
+		h2{ 
+			font-size: 24px; 
+			margin-bottom: 15px;
+		}
+		p{
+			width: 80%;
+			margin: 0 auto;
+		}
+	}
+	.project-team_teachers{
+		.label{ display: none; }
+	}
+	.previous-working{ display: none; }
+	.questions{
+		h4{
+			font-size: 24px;
+			text-align: center;
+			font-weight: normal;
+			margin-bottom: 10px;
+		}
+		.desc{
+			width: 80%;
+			margin: 0 auto 25px;
+			text-align: center;
+		}
+	}
 }
 
 
