--- a/less/style.less
+++ b/less/style.less
@@ -1104,6 +1104,24 @@ footer.main-menu{
 		}
 	}
 }
+/* Для отображения на планшете */ 
+.project-team_tablet{
+	display: none;
+	.col-md-3{ padding-left: 0; }
+	&_item{
+		margin: 0;
+		margin-top: 20px;
+		.head{
+			font-size: 16px;
+			font-weight: bold;
+			margin: 10px 0 5px;
+		}
+		.more{
+			position: relative;
+			top: -10px;
+		}
+	}
+}
 
 
 /* Кто работал */
